<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StaffManagementFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/StaffMAnagementConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/application_theme">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:text="@string/StaffManagement"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/AddStaff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/ModifyDeleteStaff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>