<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ForgetPasswordFragment">

    <data>
        <variable
            name="forgetPasswordFragment"
            type="com.example.hotelix_application.ForgetPasswordFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/forgetPasswordConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/application_theme">

        <ImageView
            android:id="@+id/forget_pass_icon"
            android:layout_width="61dp"
            android:layout_height="72dp"
            android:layout_marginTop="96dp"
            android:layout_marginBottom="563dp"
            android:contentDescription="@string/forget_password"
            android:src="@drawable/ic_lock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="426dp"
            android:text="@string/forgot_your_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_pass_icon" />

        <!--   to set vertical center need set alignment as gravity   -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="@dimen/large_box_width"
            android:layout_height="@dimen/large_box_height"
            android:background="@drawable/rounded_box"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white"
            android:textAlignment="gravity"
            android:gravity="center|center_vertical"
            android:hint="@string/type_your_email"
            android:textSize="@dimen/font_size"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_btn"
            android:layout_width="@dimen/large_btn_width"
            android:layout_height="@dimen/large_btn_height"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/btnColorBlack"
            android:text="@string/send"
            android:onClick="@{()-> forgetPasswordFragment.handleSendEmail()}"
            app:cornerRadius="@dimen/btn_radius_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>