<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".statusfragment.AddStatusFragment">
<!--    android:theme="@style/application_theme"-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/room_name_textbox_textbox_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/room_name"
        app:counterEnabled="true"
        app:counterMaxLength="4"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_bedroom">
        <!--        app:errorEnabled="true"-->
        <!--        app:errorIconDrawable="@drawable/ic_error"-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/room_name_textbox_textbox_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_room_status_textbox_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/room_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_name_textbox_textbox_layout"
        app:startIconDrawable="@drawable/ic_status">

        <AutoCompleteTextView
            android:id="@+id/update_room_status_textbox_layout_autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="Room Cleaned" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_status_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_room_status_textbox_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>